# Techcraft-Core

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: pack_file.cmake
demo/: CMakeLists.txt  download_assets.sh
demo/src/: demo.cpp  demo.hpp  main.cpp
include/tech-core/: buffer.hpp  camera.hpp  common_includes.hpp  compute.hpp  debug.hpp  device.hpp  engine.hpp  font.hpp  forward.hpp  image.hpp  inputmanager.hpp  material.hpp  mesh.hpp  model.hpp  object.hpp  pipeline.hpp  post_processing.hpp  setup.hpp  shader.hpp  swapchain.hpp  task.hpp  texturemanager.hpp  types.hpp  vertex.hpp
include/tech-core/gui/: common.hpp  drawer.hpp  manager.hpp
include/tech-core/material/: builder.hpp  common.hpp  manager.hpp  material.hpp  names.hpp
include/tech-core/scene/: debug.hpp  entity.hpp  scene.hpp
include/tech-core/scene/components/: base.hpp  light.hpp  mesh_renderer.hpp  transform.hpp
include/tech-core/shader/: common.hpp  requirements.hpp  shader.hpp  shader_builder.hpp  stage.hpp  stage_builder.hpp  standard.hpp
include/tech-core/shapes/: bounding_box.hpp  bounding_sphere.hpp  frustum.hpp  plane.hpp
include/tech-core/subsystem/: base.hpp  debug.hpp  imgui.hpp  light.hpp  objects.hpp  sky.hpp  terrain.hpp
include/tech-core/texture/: builder.hpp  common.hpp  manager.hpp  texture.hpp
include/tech-core/utilities/: any.hpp  badge.hpp  flags.hpp
shaders/: gui-frag.glsl  gui-vert.glsl
shaders/builtin/: deferred_geom_frag.glsl  deferred_lighting_frag.glsl  deferred_lighting_vert.glsl  standard-frag.glsl  standard-vert.glsl
src/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  compute.cpp  debug.cpp  device.cpp  device.hpp  engine.cpp  engine.hpp  execution_controller.cpp  execution_controller.hpp  font.cpp  font.hpp  image.cpp  image.hpp  imageutils.cpp  imageutils.hpp  inputmanager.cpp  material.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  object.cpp  object.hpp  pipeline.cpp  pipeline.hpp  post_processing.cpp  setup.hpp  shader.cpp  swapchain.cpp  swapchain.hpp  task.cpp  task.hpp  texturemanager.cpp  texturemanager.hpp  vertex.hpp  vulkanutils.cpp  vulkanutils.hpp
src/gui/: common.cpp  common.hpp  drawer.cpp  drawer.hpp  manager.cpp  manager.hpp
src/internal/packaged/: builtin_deferred_geom_frag_glsl.h  builtin_deferred_lighting_frag_glsl.h  builtin_deferred_lighting_vert_glsl.h  builtin_standard_frag_glsl.h  builtin_standard_vert_glsl.h  debugline_frag_glsl.h  debugline_vert_glsl.h  effects_screen_gen_vertex_glsl.h  gui_frag_glsl.h  gui_vert_glsl.h  imgui_fragment_plain_glsl.h  imgui_vertex_glsl.h
src/material/: builder.cpp  descriptor_cache.cpp  descriptor_cache.hpp  manager.cpp  material.cpp  names.cpp
src/pipelines/: deferred_pipeline.cpp  deferred_pipeline.hpp
src/scene/: bindings.hpp  debug.cpp  entity.cpp  internal.hpp  render_planner.cpp  render_planner.hpp  scene.cpp
src/scene/components/: light.cpp  mesh_renderer.cpp  planner_data.hpp  transform.cpp
src/shader/: internal.cpp  internal.hpp  requirements.cpp  shader.cpp  shader_builder.cpp  stage.cpp  stage_builder.cpp  standard.cpp
src/shapes/: bounding_box.cpp  bounding_sphere.cpp  frustum.cpp  plane.cpp
src/subsystem/: base.hpp  debug.cpp  debug.hpp  imgui.cpp  light.cpp  light.hpp  objects.cpp  objects.hpp  sky.cpp  sky.hpp  terrain.cpp  terrain.hpp
src/texture/: builder.cpp  descriptor_cache.cpp  descriptor_cache.hpp  internal.cpp  internal.hpp  manager.cpp  sampler_cache.cpp  sampler_cache.hpp  texture.cpp
src/utilities/: binarysearch.hpp  bitset.hpp  event.hpp  lsystem.hpp  multithreading.hpp  profiler.hpp  random.hpp  registry.hpp  workers.hpp
